--- a/_posts/2019-02-27-VAE.markdown
+++ b/_posts/2019-02-27-VAE.markdown
@@ -107,10 +107,10 @@ The decomposition of the marginal likelihood can be verified as
 
 $$
 \begin{align*}
-\log p_{\theta}(x) &= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[ \log p_{\theta}(x) \right]\\
-&= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[ \log \color{red}{p_{\theta}(x)} \frac{ \color{blue}{p_\theta(z)}}{ \color{green}{p_\theta(z)}} \frac{ \color{green}{p_{\theta}(x^{(i)},z)}}{ \color{red}{p_{\theta}(x^{(i)},z)}} \frac{q_{\phi}(z \mid x)}{q_{\phi}(z \mid x)} \right]\\
-&= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[ \log \color{green}{p_{\theta} (x^{(i)}|z)} + \log \frac{ \color{blue}{p_{\theta}(z)}}{q_{\phi}(z \mid x)}  + \log \frac{q_{\phi}(z \mid x)}{ \color{red}{p_{\theta} (z\mid x^{(i)})}}  \right]\\
-&= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[\log p_{\theta} (x^{(i)}|z) \right] -D_{\text{KL}} \left(q_{\phi}(z \mid x) || p_{\theta}(z) \right) + D_{\text{kL}} \left(q_{\phi} (z \mid x^{(i)}) || p_{\theta} (z\mid x^{(i)}) \right)
+\log p_{\theta}(x^{(i)}) &= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[ \log p_{\theta}(x^{(i)}) \right]\\
+&= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[ \log \color{red}{p_{\theta}(x^{(i)})} \frac{ \color{blue}{p_\theta(z)}}{ \color{green}{p_\theta(z)}} \frac{ \color{green}{p_{\theta}(x^{(i)},z)}}{ \color{red}{p_{\theta}(x^{(i)},z)}} \frac{ \color{red}{q_{\phi}(z \mid x^{(i)})}}{\color{blue}{q_{\phi}(z \mid x^{(i)})}} \right]\\
+&= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[ \log \color{green}{p_{\theta} (x^{(i)}|z)} + \log \frac{ \color{blue}{p_{\theta}(z)}}{\color{blue}{q_{\phi}(z \mid x^{(i)})}}  + \log \frac{ \color{red}{q_{\phi}(z \mid x^{(i)})}}{ \color{red}{p_{\theta} (z\mid x^{(i)})}}  \right]\\
+&= \mathbb E_{q_{\phi}(z | x^{(i)})} \left[\log p_{\theta} (x^{(i)}|z) \right] -D_{\text{KL}} \left(q_{\phi}(z \mid x^{(i)}) || p_{\theta}(z) \right) + D_{\text{KL}} \left(q_{\phi} (z \mid x^{(i)}) || p_{\theta} (z\mid x^{(i)}) \right)
 \end{align*}
 $$
 
